1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.h (SET_WINDOW_GEOMETRY_RECORD_NAME): Add convenience
	macro.  ProbeDisplay and CompleteProbeDisplay derive from
	WindowGeometryRecordName protocol.
	CompositeWindowGeometryRecordName: New protocol.  ActionCache
	and GUIComposite protocols derive from it.
	

	* GUISwarm.m: ([GUISwarm -windowGeometryRecordName:]): Remove.

	* GUIComposite.m ([GUIComposite
	-setWindowGeometryRecordNameForComponent:widget:]): Insert when
	key doesn't exist.
	([GUIComposite -disableDestroyNotification]): New method.

	* GUIComposite.h: Declare -disableDestroyNotification.

	* CompleteProbeDisplay.m ([CompleteProbeDisplay -drop]): Disable
	destroy notification first thing.
	* SimpleProbeDisplay.m ([SimpleProbeDisplay -drop]): Likewise.


1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* GUISwarm.m ([GUISwarm -buildObjects]): Use
	SET_COMPONENT_WINDOW_GEOMETRY_RECORD_NAME.

	* GUISwarm.[hm]: Remove windowGeometryRecordNameForComponent and
	windowGeometryRecordName. 
	Add setWindowGeometryRecordNameForComponent:widget:.

	* GUIComposite.m (compareFunc): New static function for comparing
	component names.
	([GUIComposite -createEnd]): Create the componentList.
	([GUIComposite -setWindowGeometryRecordNameForComponent:widget:]): 
	New method.
	([GUIComposite -enableDestroyNotification:notificationMethod:]): Call
	Apply enableDestroyNotification:notificationMethod: to each
	component.

	* GUIComposite.h (GUIComposite): Include collections.h.  Drop
	notificationTarget and notificationMethod;
	enableDestroyNotification can't be done passthru because some
	users are createEnd, instead accumulate widgets in a
	componentList.  Drop windowGeometryRecordNameForComponenet and
	windowGeometryRecordName methods.  New method
	setWindowGeometryRecordNameForComponent:widget:.

	* ActionCache.m ([ActionCache -createProcCtrl]): Use new
	SET_COMPONENT_WINDOW_GEOMETRY_RECORD_NAME to set archiving name
	for panelWidget.
