@@ -1,3 +1,10 @@
+1998-01-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* CompleteProbeDisplay.m ([CompleteProbeDisplay -update]): Check
+	before doing each update, not before all of them.
+
+	* SimpleProbeDisplay.m ([SimpleProbeDisplay -update]): Likewise.
+
 1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* simtools.h (SET_WINDOW_GEOMETRY_RECORD_NAME): Add convenience
